removed size increase for navbar elements since it was a little buggy & dropped fonts to 4.25vw max for better readability

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -70,7 +70,7 @@ h2:after {
 .section-header {
   margin-top: 5vh;
   margin-bottom: 10vh;
-  font-size: 5vw;
+  font-size: 4.25vw;
   letter-spacing: 3px;
   font-family: 'Righteous', cursive;
   text-transform: uppercase;
@@ -124,8 +124,6 @@ a.nav-link:hover {
     transparent
     no-repeat;
   background-size:100% 3px;
-  width: 6vw;
-  font-size: 175%;
 }
 
 // CAROUSEL SETTINGS
@@ -304,7 +302,7 @@ a.nav-link:hover {
 }
 .price-info h3 {
   color: black;
-  font-size: 5vw;
+  font-size: 4.25vw;
   margin-top: 5vh;
 }
 .price-info p {
@@ -686,7 +684,7 @@ footer span {
   .callUs {
     position: relative;
     top: 78vh;
-    font-size: 4.5vw !important;
+    font-size: 4.25vw !important;
   }
   .res-info {
     text-align: left;
